@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4RayTracer.hh,v 1.6 2001-07-11 10:09:02 gunter Exp $
+// $Id: G4RayTracer.hh,v 1.7 2001-07-14 19:21:22 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -159,11 +159,11 @@ class G4RayTracer : public G4VGraphicsSystem
     inline G4int GetNColumn() const { return nColumn; }
     inline void SetNRow(G4int val) { nRow = val; }
     inline G4int GetNRow() const { return nRow; }
-    inline void SetEyePosition(G4ThreeVector val) { eyePosition = val; }
+    inline void SetEyePosition(const G4ThreeVector& val) { eyePosition = val; }
     inline G4ThreeVector GetEyePosition() const { return eyePosition; }
-    inline void SetTargetPosition(G4ThreeVector val) { targetPosition = val; }
+    inline void SetTargetPosition(const G4ThreeVector& val) { targetPosition = val; }
     inline G4ThreeVector GetTargetPosition() const { return targetPosition; }
-    inline void SetLightDirection(G4ThreeVector val) { lightDirection = val.unit(); }
+    inline void SetLightDirection(const G4ThreeVector& val) { lightDirection = val.unit(); }
     inline G4ThreeVector GetLightDirection() const { return lightDirection; }
     inline void SetHeadAngle(G4double val) { headAngle = val; }
     inline G4double GetHeadAngle() const { return headAngle; }
